welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: value update is not a member of String
  else if (litMessage() = "R") {
           ^BDRBuggle:10: error: value update is not a member of String
  else if (litMessage() = "L") {
           ^BDRBuggle:14: error: value update is not a member of String
  else if (litMessage() = "I") {
           ^BDRBuggle:19: error: value update is not a member of String
  else if (litMessage() = "A") {
           ^BDRBuggle:22: error: value update is not a member of String
  else if (litMessage() = "B") {
           ^BDRBuggle:26: error: value update is not a member of String
  else if (litMessage() = "C") {
           ^BDRBuggle:31: error: value update is not a member of String
  else if (litMessage() = "Z") {
           ^BDRBuggle:34: error: value update is not a member of String
  else if (litMessage() = "Z") {
           ^BDRBuggle:38: error: value update is not a member of String
  else if (litMessage() = "Z") {
           ^